# sift

./: .gitignore  README.md  pyproject.toml  walkthrough.cast  walkthrough_trimmed.cast
benchmarks/: metrics.py
benchmarks/ground_truth/: m57_jean_truth.json
cases/m57-jean/: manifest.json
docs/: accuracy_report.md  dataset_documentation.md  project_description.md  runbook.md  spoliation_attacks.md
sentinel/: analyst.py  cli.py  coordinator.py  evidence.py  investigator.py  logging.py  models.py  reporter.py  skeptic.py
sentinel/mcp_server/: guards.py  server.py
sentinel/mcp_server/tools/disk/: browser.py  extract.py  hash_verify.py  mft.py  partitions.py  prefetch.py  registry.py  runkeys.py  services.py  shimcache.py  users.py
sentinel/prompts/: analyst.md  skeptic.md
tests/unit/: test_guards.py  test_models.py
