[project]
name = "sift-sentinel"
version = "0.1.0"
description = "A DFIR investigation architecture that minimizes hallucination and enforces traceable, reproducible findings through structural citation validation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "mcp>=1.0.0",
    "pydantic>=2.7.0",
    "click>=8.1.0",
    "regipy>=4.0.0",
    "python-evtx>=0.7.4",
    "yara-python>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["sentinel*"]
